--- a/index.html
+++ b/index.html
@@ -28,6 +28,13 @@
         </svg>
       </button>
     </div>
+    <div class="mobile-search">
+      <svg class="icon icon-search" width="19" height="19">
+        <use href="img/icons.svg#search"></use>
+      </svg>
+    </div>
+    <!-- /.mobile-search -->
+    
     <div class="icons">
       <a href="#" class="icons-link">
         <svg class="icon icon-video" width="27" height="20">
@@ -50,6 +57,44 @@
     </a>
     <!-- /.user -->
   </header>
+
+  <div class="mobile-sidebar">
+    <ul class="nav-menu">
+      <li class="nav-item">
+        <a href="#" class="nav-link">
+          <svg class="icon icon-home" width="20" height="19">
+            <use href="img/icons.svg#home"></use>
+          </svg>
+          <span class="nav-text">Home</span>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a href="#" class="nav-link">
+          <svg class="icon icon-tranding" width="22" height="26">
+            <use href="img/icons.svg#tranding"></use>
+          </svg>
+          <span class="nav-text">Trending</span>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a href="#" class="nav-link">
+          <svg class="icon icon-subscription" width="22" height="26">
+            <use href="img/icons.svg#subscription"></use>
+          </svg>
+          <span class="nav-text">Subscriptions</span>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a href="#" class="nav-link">
+          <svg class="icon icon-library" width="20" height="19">
+            <use href="img/icons.svg#library"></use>
+          </svg>
+          <span class="nav-text">Library</span>
+        </a>
+      </li>
+    </ul>
+  </div>
+  <!-- /.mobile-sidebar -->
 
   <div class="container">
     <aside class="sidebar">
@@ -224,129 +269,131 @@
         </div>
 
         <!-- Slider main container -->
-        <div class="swiper-container channel-slider">
-          <!-- Additional required wrapper -->
-          <div class="swiper-wrapper">
-            <!-- Slides -->
-            <div class="swiper-slide">
-              <div class="video-card">
-                <div class="video-thumb">
-                  <img src="img/cover-video.png" alt="" class="thumbnail">
-                  <span class="video-duration">4:15</span>
+        <div class="wrapper">
+          <div class="swiper-container channel-slider">
+            <!-- Additional required wrapper -->
+            <div class="swiper-wrapper">
+              <!-- Slides -->
+              <div class="swiper-slide">
+                <div class="video-card">
+                  <div class="video-thumb">
+                    <img src="img/cover-video.png" alt="" class="thumbnail">
+                    <span class="video-duration">4:15</span>
+                  </div>
+                  <!-- /.video-thumb -->
+                  <h3 class="video-title">A Brief History Of Creation</h3>
+                  <div class="video-info">
+                    <span class="video-counter">
+                      <span class="video-views">80k views</span>
+                      <span class="video-date">3 days ago</span>
+                    </span>
+                    <span class="video-channel">Dollie Blair</span>
+                  </div>
+                  <!-- /.video-info -->
                 </div>
-                <!-- /.video-thumb -->
-                <h3 class="video-title">A Brief History Of Creation</h3>
-                <div class="video-info">
-                  <span class="video-counter">
-                    <span class="video-views">80k views</span>
-                    <span class="video-date">3 days ago</span>
-                  </span>
-                  <span class="video-channel">Dollie Blair</span>
-                </div>
-                <!-- /.video-info -->
+                <!-- /.video-card -->
               </div>
-              <!-- /.video-card -->
-            </div>
-            <!-- /.swiper-slide -->
-            <div class="swiper-slide">
-              <div class="video-card">
-                <div class="video-thumb">
-                  <img src="img/right-hotel.png" alt="" class="thumbnail">
-                  <span class="video-duration">8:00</span>
+              <!-- /.swiper-slide -->
+              <div class="swiper-slide">
+                <div class="video-card">
+                  <div class="video-thumb">
+                    <img src="img/right-hotel.png" alt="" class="thumbnail">
+                    <span class="video-duration">8:00</span>
+                  </div>
+                  <!-- /.video-thumb -->
+                  <h3 class="video-title">Selecting The Right Hotel</h3>
+                  <div class="video-info">
+                    <span class="video-counter">
+                      <span class="video-views">123k views</span>
+                      <span class="video-date">1 months ago</span>
+                    </span>
+                    <span class="video-channel">Dollie Blair</span>
+                  </div>
+                  <!-- /.video-info -->
                 </div>
-                <!-- /.video-thumb -->
-                <h3 class="video-title">Selecting The Right Hotel</h3>
-                <div class="video-info">
-                  <span class="video-counter">
-                    <span class="video-views">123k views</span>
-                    <span class="video-date">1 months ago</span>
-                  </span>
-                  <span class="video-channel">Dollie Blair</span>
-                </div>
-                <!-- /.video-info -->
+                <!-- /.video-card -->
               </div>
-              <!-- /.video-card -->
-            </div>
-            <div class="swiper-slide">
-              <div class="video-card">
-                <div class="video-thumb">
-                  <img src="img/asteroids.png" alt="" class="thumbnail">
-                  <span class="video-duration">5:32</span>
+              <div class="swiper-slide">
+                <div class="video-card">
+                  <div class="video-thumb">
+                    <img src="img/asteroids.png" alt="" class="thumbnail">
+                    <span class="video-duration">5:32</span>
+                  </div>
+                  <!-- /.video-thumb -->
+                  <h3 class="video-title">Asteroids</h3>
+                  <div class="video-info">
+                    <span class="video-counter">
+                      <span class="video-views">43k views</span>
+                      <span class="video-date">12 days ago</span>
+                    </span>
+                    <span class="video-channel">Dollie Blair</span>
+                  </div>
+                  <!-- /.video-info -->
                 </div>
-                <!-- /.video-thumb -->
-                <h3 class="video-title">Asteroids</h3>
-                <div class="video-info">
-                  <span class="video-counter">
-                    <span class="video-views">43k views</span>
-                    <span class="video-date">12 days ago</span>
-                  </span>
-                  <span class="video-channel">Dollie Blair</span>
-                </div>
-                <!-- /.video-info -->
+                <!-- /.video-card -->
               </div>
-              <!-- /.video-card -->
-            </div>
-            <div class="swiper-slide">
-              <div class="video-card">
-                <div class="video-thumb">
-                  <img src="img/telescopes.png" alt="" class="thumbnail">
-                  <span class="video-duration">6:40</span>
+              <div class="swiper-slide">
+                <div class="video-card">
+                  <div class="video-thumb">
+                    <img src="img/telescopes.png" alt="" class="thumbnail">
+                    <span class="video-duration">6:40</span>
+                  </div>
+                  <!-- /.video-thumb -->
+                  <h3 class="video-title">Telescopes 101</h3>
+                  <div class="video-info">
+                    <span class="video-counter">
+                      <span class="video-views">11k views</span>
+                      <span class="video-date">6 months ago</span>
+                    </span>
+                    <span class="video-channel">Dollie Blair</span>
+                  </div>
+                  <!-- /.video-info -->
                 </div>
-                <!-- /.video-thumb -->
-                <h3 class="video-title">Telescopes 101</h3>
-                <div class="video-info">
-                  <span class="video-counter">
-                    <span class="video-views">11k views</span>
-                    <span class="video-date">6 months ago</span>
-                  </span>
-                  <span class="video-channel">Dollie Blair</span>
-                </div>
-                <!-- /.video-info -->
+                <!-- /.video-card -->
               </div>
-              <!-- /.video-card -->
-            </div>
-            <div class="swiper-slide">
-              <div class="video-card">
-                <div class="video-thumb">
-                  <img src="img/medical.png" alt="" class="thumbnail">
-                  <span class="video-duration">1:45</span>
+              <div class="swiper-slide">
+                <div class="video-card">
+                  <div class="video-thumb">
+                    <img src="img/medical.png" alt="" class="thumbnail">
+                    <span class="video-duration">1:45</span>
+                  </div>
+                  <!-- /.video-thumb -->
+                  <h3 class="video-title">Medical Care Is Just</h3>
+                  <div class="video-info">
+                    <span class="video-counter">
+                      <span class="video-views">18k views</span>
+                      <span class="video-date">2 days ago</span>
+                    </span>
+                    <span class="video-channel">Dollie Blair</span>
+                  </div>
+                  <!-- /.video-info -->
                 </div>
-                <!-- /.video-thumb -->
-                <h3 class="video-title">Medical Care Is Just</h3>
-                <div class="video-info">
-                  <span class="video-counter">
-                    <span class="video-views">18k views</span>
-                    <span class="video-date">2 days ago</span>
-                  </span>
-                  <span class="video-channel">Dollie Blair</span>
-                </div>
-                <!-- /.video-info -->
+                <!-- /.video-card -->
               </div>
-              <!-- /.video-card -->
-            </div>
-            <div class="swiper-slide">
-              <div class="video-card">
-                <div class="video-thumb">
-                  <img src="img/gazing.png" alt="" class="thumbnail">
-                  <span class="video-duration">2:12</span>
+              <div class="swiper-slide">
+                <div class="video-card">
+                  <div class="video-thumb">
+                    <img src="img/gazing.png" alt="" class="thumbnail">
+                    <span class="video-duration">2:12</span>
+                  </div>
+                  <!-- /.video-thumb -->
+                  <h3 class="video-title">Moon Gazing</h3>
+                  <div class="video-info">
+                    <span class="video-counter">
+                      <span class="video-views">67k views</span>
+                      <span class="video-date">4 months ago</span>
+                    </span>
+                    <span class="video-channel">Dollie Blair</span>
+                  </div>
+                  <!-- /.video-info -->
                 </div>
-                <!-- /.video-thumb -->
-                <h3 class="video-title">Moon Gazing</h3>
-                <div class="video-info">
-                  <span class="video-counter">
-                    <span class="video-views">67k views</span>
-                    <span class="video-date">4 months ago</span>
-                  </span>
-                  <span class="video-channel">Dollie Blair</span>
-                </div>
-                <!-- /.video-info -->
+                <!-- /.video-card -->
               </div>
-              <!-- /.video-card -->
             </div>
+  
           </div>
-
+          <!-- /.swiper-container -->
         </div>
-        <!-- /.swiper-container -->
       </div>
       <!-- /.channel -->
 
